test/test_11710503_5.spl
struct foo{
    int a;
    float c;
};

struct foo{
    int d;
    float e;
};

int main(){
    int b[10];
    b[1.0] = 10;
}